--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,10 @@ title: blank # the website title (if blank, full name will be used instead)
 first_name: Giovanni
 middle_name: 
 last_name: Pittiglio
-email: you@example.com
+email: giovanni.pittiglio@childrens.harvard.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
+  I am a postdoctoral research fellow at Boston Chilnden's Hospital, in the Dupont's lab. My research interest is designing
+  continuum robots for navigation deep in the anatomy, with the aim of diagnosis and treating cancerous tissue or faulty organs. 
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
