--- a/_config.yml
+++ b/_config.yml
@@ -275,8 +275,8 @@ display_categories: ['blockquotes'] # these categories will be displayed on the 
 
 scholar:
 
-  last_name: [Einstein]
-  first_name: [Albert, A.]
+  last_name: [Giovanni]
+  first_name: [Pittiglio]
 
   style: apa
   locale: en
