--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -3,7 +3,6 @@
   contents:
     - name: Full Name
       value: Giovanni Pittiglio
-    - name: Date of Birth
     - name: Languages
       value: English, Italian
 
@@ -11,43 +10,86 @@
   type: time_table
   contents:
     - title: PhD
-      institution: University of Leeds, Leeds, UK
-      year: 2022
-    - title: MRes
-      institution: Imperial College London, London, UK
-      year: 2017
-    - title: MSc
-      institution: University of Pisa, Pisa, Italy
-      year: 2016
-    - title: BSc
-      institution: University of Pisa, Pisa, Italy
-      year: 2012
+      institution: University of Zurich, Zurich, Switzerland
+      year: 1905
+      description:
+        - Description 1.
+        - Description 2.
+        - title: Description 3.
+          contents:
+            - Sub-description 1.
+            - Sub-description 2.
+    - title: Federal teaching diploma
+      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
+      year: 1900
+      description:
+        - Description 1.
+        - Description 2.
 
 - title: Experience
   type: time_table
   contents:
-    - title: Tenure Track Assistant Professor
-      institution: Worcester Polytechnic Institute, Worcester, USA
-      year: 2024 - present
-    - title: Postdoctoral Research Fellow
-      institution: Boston Children's Hospital, Harvard Medical School, Boston, USA
-      year: 2022-2024
+    - title: Professor of Theoretical Physics
+      institution: Institute for Advanced Study, Princeton University
+      year: 1933 - 1955
+      description:
+        - Description 1.
+        - Description 2.
+        - title: Description 3.
+          contents:
+            - Sub-description 1.
+            - Sub-description 2.
+    - title: Visiting Professor
+      institution: California Institute of Technology, Pasadena, California, US
+      year: 1933
+      description:
+        - Description 1.
+        - Description 2.
+
+    - title: Director
+      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
+      year: 1917-1933
+
+    - title: Professor of Theoretical Physics
+      institution: Karl-Ferdinand University, Prague, Czechoslovakia
+      year: 1911 - 1917
+      description:
+
+    - title: Associate Professor of Theoretical Physics
+      institution: University of Zurich, Zurich, Switzerland
+      year: 1909 - 1911
+
+- title: Open Source Projects
+  type: time_table
+  contents:
+    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
+      year: 2015-now
+      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
 
 - title: Honors and Awards
   type: time_table
   contents:
-    - year: 2023
-      items: 
-        - Finalist for best paper award at the at IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS) 2023
-        - UK Alumni Award for Science and Sustainability in the USA
-        - Best paper award at the Hamlyn Symposium on Medical Robotics 2023
-        - Best paper award at the International Symposium on Medical Robotics (ISMR) 2023
-    - year: 2022
-      items: 
-        - Carter prize 2021-22 for the best research paper
-        - Best paper award at Conference on New Technologies for Computer and Robot Assisted Surgery (CRAS) 2022
-   - year: 2019
-      items: 
-        - KUKA Innovation Award 2019
-       
+    - year: 1921
+      items:
+        - Nobel Prize in Physics
+        - Matteucci Medal
+    - year: 2029
+      items:
+        - Max Planck Medal
 
+- title: Academic Interests
+  type: nested_list
+  contents:
+    - title: Topic 1.
+      items:
+        - Description 1.
+        - Description 2.
+    - title: Topic 2.
+      items:
+        - Description 1.
+        - Description 2.
+
+- title: Other Interests
+  type: list
+  contents:
+    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
